[package]
name = "coord-transform"
version = "0.1.0"
edition = "2021"
authors = ["user <free_gis@qq.com>"]
license = "BSD-3-Clause"
description = "基于rust的高德、百度、WGS84互相转换算法"
repository = "https://github.com/FreeGIS/coord-transform.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
